--- a/style.css
+++ b/style.css
@@ -104,26 +104,43 @@ a:hover{
     text-decoration: underline;
 }
 
-.right{
-background-color: red;
-/* height: 300px; */
-width: 25%;
-float: left;
-}
+
 
 main{
-background-color: purple;
-/* height: 300px; */
+background-color: white;
+box-shadow: 2px 2px 2px darkgray;
 margin-left: 10px;
 margin-right: 10px;
 width: calc(50% - 20px);
 float: left;
-padding: 10px;
+}
+
+.titolo-paragrafo{
+    margin: 10px;
+}
+
+h3{
+    font-size: 45px;
+}
+
+#paragrafo{
+    margin: 10px;
+}
+
+#sfondo{
+    background-size: cover;
+}
+
+.right{
+width: 25%;
+float: left;
 }
 
 .sopra{
 background-color: white;
 padding: 10px;
+margin-bottom: 10px;
+box-shadow: 2px 2px 2px darkgray;
 }
 
 button{
@@ -140,12 +157,15 @@ button:hover{
 }
 
 input{
-  padding: 12px 20px;
+  padding: 12px 0px;
   box-sizing: border-box;
 }
+
 .sotto{
-background-color: pink;
-margin: 10px;
+padding: 10px;
+background-color: white;
+margin-bottom: 10px;
+box-shadow: 2px 2px 2px darkgray;
 }
 
 footer{
