--- a/style.css
+++ b/style.css
@@ -53,9 +53,9 @@ clear: both; */
     line-height: 50px;
 }
 
-.menuitems::after{
+/* .menuitems::after{
     content: "▼";
-}
+} */
 
 .menuitems:hover{
     background-color: #302b27;
@@ -124,8 +124,7 @@ h3{
 }
 
 #sfondo{
-    background-size: cover;
-    background-position: center center;
+    width: 100%;
 }
 
 #paragrafo{
@@ -172,9 +171,10 @@ box-shadow: 2px 2px 2px darkgray;
 }
 
 footer{
-    background-color: green;
+    background-color: white;
     width: 100%;
     margin-top: 10px;
     margin-bottom: 10px;
     padding: 10px;
+    box-shadow: 2px 2px 2px darkgray;
 }
